--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
         href="https://www.tiktok.com/@hahahahapedro?_t=8epP2E9qMN6&_r=1"
         >Tiktok</a
       >
+      <a class="footer-link" href="https://github.com/Iospedro">GitHub</a>
       <p id="Credits">© 2023 Iosif Puha.</p>
     </div>
   </body>
