--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
         src="CSS - My Site Images/cloud.png"
         alt="cloud-img"
       />
-      <img src="CSS - My Site Images/mountain.png" alt="mountain-img" />
+      <img
+        class="mountain"
+        src="CSS - My Site Images/mountain.png"
+        alt="mountain-img"
+      />
     </div>
 
     <div class="middle-container">
@@ -107,7 +111,9 @@
         href="https://www.tiktok.com/@hahahahapedro?_t=8epP2E9qMN6&_r=1"
         >Tiktok</a
       >
+
       <a class="footer-link" href="https://github.com/Iospedro">GitHub</a>
+
       <p id="Credits">© 2023 Iosif Puha.</p>
     </div>
   </body>
