--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         alt="cloud-img"
       />
       <h1>I'm Iosif</h1>
-      <h2>a web developer</h2>
+      <h2>a web developer.</h2>
       <img
         class="bottom-cloud"
         src="CSS - My Site Images/cloud.png"
