--- a/index.html
+++ b/index.html
@@ -953,7 +953,7 @@
     <!-- External JS -->
     <script
       type="text/javascript"
-      src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"
+      src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"
     ></script>
     <script src="./vendor/bootstrap/popper.min.js"></script>
     <script src="./vendor/bootstrap/bootstrap.min.js"></script>
