--- a/contact.html
+++ b/contact.html
@@ -212,7 +212,7 @@
     <!-- External JS -->
     <script
       type="text/javascript"
-      src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"
+      src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"
     ></script>
     <script src="vendor/bootstrap/popper.min.js"></script>
     <script src="vendor/bootstrap/bootstrap.min.js"></script>
