--- a/index.html
+++ b/index.html
@@ -938,7 +938,7 @@
                 >
                   <iconify-icon icon="jam:linkedin" width="28"></iconify-icon>
                 </a>
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="https://www.fiverr.com/iosifpuha266?">
                   <iconify-icon icon="jam:fiverr" width="28"></iconify-icon>
                 </a>
                 <a class="nav-link" href="https://github.com/Iospedro">
