--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Contact</title>
+    <link rel="icon" href="icons/favicon-32x32.png" />
     <meta name="description" content="Core HTML Project" />
     <meta
       name="viewport"
