--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                   can focus on the content and message you're trying to convey.
                 </p>
                 <p>
-                  <a class="btn btn-link" href="#gtco-portfolio" role="button"
+                  <a class="btn btn-link" href="#gtco-pricing" role="button"
                     >View details</a
                   >
                 </p>
@@ -152,7 +152,7 @@
                   you to ensure your website is tailored to your unique vision.
                 </p>
                 <p>
-                  <a class="btn btn-link" href="#gtco-portfolio" role="button"
+                  <a class="btn btn-link" href="#gtco-pricing" role="button"
                     >View details</a
                   >
                 </p>
