--- a/index.html
+++ b/index.html
@@ -888,7 +888,7 @@
             </div>
             <div class="skill-row">
               <img class="HTMLicon" src="img/html.gif" alt="computer-img" />
-              <h3>WebDevelopment & Design</h3>
+              <h3>WebDev & Design</h3>
               <p>
                 I've started coding at University, studying Computer-Science,
                 then I started being passionate about Web Development and
