--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           <div class="section-content">
             <div class="title-wrap">
               <h2 class="section-title">
-                Hire me if you want <br />to build<b> websites online</b>
+                Contact me if you want <br />to build<b> websites online</b>
               </h2>
               <p class="section-sub-title">
                 <!--section in which I speak about services offered by my web-development agency-->
