--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
           <div class="section-content">
             <!-- Section Title -->
             <div class="title-wrap">
-              <h2 class="section-title">Check out <b>My</b> Works</h2>
+              <h2 class="section-title">Check out <b>My</b> Work</h2>
               <p class="section-sub-title">
                 A brief portfolio to showcase my abilities as a developer <br />
                 and my interests as a tech user. Pip it and get an idea.
