--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
                       <a href="https://worktrack-app.com"
                         ><img
                           class="btn-img"
-                          src="icons/wt-favicon-black.png"
+                          src="icons/Group 1_512x512.png"
                           alt="worktrack-logo"
                           style="width: 80px; display: flex"
                       /></a>
